# relative-fitness-mechanisms

./: .gitignore  README.md  pyproject.toml
data/: README.md  selective_pressure_growth_cases.tsv  selective_pressure_growth_cases_full.tsv
data/cases/: prepared_cases_ukhsa.tsv
data/nextstrain-clade/: README.md  collapsed-sequence-counts-global.tsv  generate-counts.sh  prepared-sequence-counts.tsv
data/nextstrain-clade-usa/: README.md  collapsed-sequence-counts-usa.tsv  generate-counts.sh
data/pango-lineage/: README.md  collapsed-sequence-counts-global.tsv  (+1 more)
manuscript/: relative-fitness-mechanisms.bib  relative-fitness-mechanisms.tex
notebooks/: DR-Dev.ipynb  FinalAcknowledgements.ipynb  GP_IntroFig.ipynb  InterpretingImmuneEscapeFromRelativeFitness.ipynb  Latent Factor Model.ipynb  LatentFactorModel.ipynb  LatentFactorsToTiters.ipynb  OverviewFigure-Components.ipynb  OverviewFigure_GP_Figure.ipynb  PreparingSelectivePressureDataSet.ipynb  README.md  RegularizedSVD.ipynb  SelectivePressureModelComparison.ipynb  SelectivePressureToEmpiricalGrowthRate.ipynb  Short-Term-Divergence-By-Mechanism.ipynb  ShortTermDivergenceByMechanism.ipynb  TransmissibilityEscapeTradeOff.ipynb  TransmissiblityEscapeTradeOff.ipynb
relative_fitness_mechanisms/: __init__.py  frequency_simulation.py  latent_immunity_relative_fitness.py  ml_utils.py  ode_models.py  plot_utils.py  relative_fitness_gp.py  relative_fitness_hsgp.py  selective_pressure.py  selective_pressure_prediction.py  setup.py
scripts/: collapse-counts.py  download-sequence-count-data.py  prepare-data.py
(+1167 files in other folders)
