[tool.poetry]
name = "relative-fitness-mechanisms"
version = "0.1.0"
description = ""
authors = ["marlinfiggins <marlinfiggins@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "relative_fitness_mechanisms"}]

[tool.poetry.dependencies]
python = "^3.9"
evofr = "^0.1.17"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
jax = "^0.3.10"
jaxlib = "^0.3.10"
tinygp = "^0.2.4"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
