[tool.poetry]
name = "relative-fitness-mechanisms"
version = "0.1.0"
description = ""
authors = ["marlinfiggins <marlinfiggins@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "relative_fitness_mechanisms"}]

[tool.poetry.dependencies]
python = "^3.9"
evofr = "^0.1.17"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
jax = "^0.4.14"
jaxlib = "^0.4.1"
tinygp = "^0.2.4"
scikit-learn = "^1.3.2"
pango-aliasor = "^0.3.0"
flax = "^0.8.4"
optax = "^0.2.2"
torch = "^2.3.1"
pytorch-lightning = "^2.3.3"
tensorboard = "^2.17.0"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
